--- a/D1D2_analysis.ipynb
+++ b/D1D2_analysis.ipynb
@@ -21,23 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] The system cannot find the path specified: '/home/dana_z/ssd_2TB/6OHDA'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-f8598e46f995>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mh5py\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mIO\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mutils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mplotUtils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mColorSchems\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcolorPallet\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mCP\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Documents\\Reaserch\\6OHDA\\utils.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0minterpolate\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msignal\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mchronux\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstride_tricks\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mas_strided\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Documents\\Reaserch\\6OHDA\\chronux.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m \"\"\"\n\u001b[0;32m     10\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'/home/dana_z/ssd_2TB/6OHDA'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;31m#import mpld3\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m#mpld3.enable_notebook()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: '/home/dana_z/ssd_2TB/6OHDA'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.chdir('/home/dana_z/ssd_2TB/6OHDA')\n",
@@ -72,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,9 +70,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dana_z/ssd_2TB/6OHDA/IO.py:282: H5pyDeprecationWarning: dataset.value has been deprecated. Use dataset[()] instead.\n",
+      "  dff = hf[m][s]['traces']['dff'].value\n",
+      "/home/dana_z/ssd_2TB/6OHDA/IO.py:152: H5pyDeprecationWarning: dataset.value has been deprecated. Use dataset[()] instead.\n",
+      "  speed = hf[m][s]['mvmt']['speed'].value\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cleaning up trace data\n",
+      "I deleted session: 8430_BaselineA\n",
+      "cleaning up trace data\n",
+      "cleaning up speed data\n",
+      "cleaning up trace data\n",
+      "I deleted session: 7909_day30A\n",
+      "I deleted session: 8430_day15A\n",
+      "I deleted session: 8803_day30A\n",
+      "cleaning up trace data\n",
+      "cleaning up speed data\n",
+      "cleaning up trace data\n",
+      "cleaning up speed data\n",
+      "cleaning up trace data\n",
+      "cleaning up speed data\n",
+      "cleaning up trace data\n",
+      "I deleted session: 1208_BaselineA\n",
+      "I deleted session: 1222_BaselineA\n",
+      "I deleted session: 1253_BaselineA\n",
+      "I deleted session: 1793_BaselineA\n",
+      "cleaning up trace data\n",
+      "cleaning up speed data\n",
+      "cleaning up trace data\n",
+      "I deleted session: 0761_day14A\n",
+      "I deleted session: 0761_day31A\n",
+      "I deleted session: 1222_day32A\n",
+      "I deleted session: 1793_day30A\n",
+      "cleaning up trace data\n",
+      "cleaning up speed data\n"
+     ]
+    }
+   ],
    "source": [
     "# data for all mice - homomorphic filter - Only Amphetamine sessions\n",
     "HfPVdataH = getData(Files[1],['speed','trace'],period ='Pre', cre='PV',red = True,day = lambda x: x==0,drug=b'Amphetamin')\n",
@@ -99,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +168,9 @@
     "cond = ['PVdataH','MSNdataH','CHIdataH','PVdataP','MSNdataP','CHIdataP']\n",
     "transWindow = np.ones((10,1))\n",
     "for c in cond:\n",
-    "    data = eval(c)\n",
+    "    data = eval('Hf'+c)\n",
     "    for sess in data.keys():\n",
-    "        try:\n",
+    "#        try:\n",
     "            if sess[5] == 'B':\n",
     "                day = 0\n",
     "            else:\n",
@@ -156,6 +187,9 @@
     "                CaO = Ca[:,1:]-Ca[:,:-1]\n",
     "                if CaO.shape[1]<Hp.shape[0]:\n",
     "                     CaO = np.append(CaO,np.zeros((CaO.shape[0],1)),axis=1)\n",
+    "                elif CaO.shape[1]>Hp.shape[0]:\n",
+    "                     CaO = CaO[:,:-1]\n",
+    "\n",
     "                C_start = (CaO==1)*1\n",
     "                C_end = (CaO==-1)*1\n",
     "    #            Acc = np.append(np.convolve(np.diff(Lp*1+Mp*2+Hp*3)>0, transWindow[:,0], mode='same')>0,False)\n",
@@ -166,7 +200,7 @@
     "                                np.sum(C_start[:,Lp],axis=1),np.sum(C_start,axis=1),\n",
     "                                np.sum(C_end[:,Hp],axis=1),np.sum(C_end[:,Mp],axis=1),np.sum(C_end[:,Lp],axis=1),\n",
     "                                np.sum(C_end[:,Acc],axis=1),np.sum(C_end[:,Dcc],axis=1)]).T\n",
-    "                df2 = pd.DataFrame(a, columns = col_names[3:])\n",
+    "                df2 = pd.DataFrame(a, columns = col_names[5:])\n",
     "                df2['totalTime'] = (Hp.shape[0]/1200)\n",
     "                df2['lowTime'] = np.sum(Lp/1200)\n",
     "                df2['medTime'] = np.sum(Mp/1200)\n",
@@ -181,21 +215,327 @@
     "                df2['CellType'] = c[:-5]\n",
     "                df2['drugPeriod'] = drugPeriod\n",
     "                df2['Beta'] = (m in betaMice) \n",
+    "                df2['Period'] = period\n",
     "                df = pd.concat([df,df2],sort=True)\n",
-    "        except:\n",
-    "            print(sess)\n",
+    "#        except:\n",
+    "#            print(sess,c,sys.exc_info())\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lowTime</th>\n",
+       "      <th>highTime</th>\n",
+       "      <th>medTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>22086.000000</td>\n",
+       "      <td>22086.000000</td>\n",
+       "      <td>22086.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>6.001460</td>\n",
+       "      <td>9.198727</td>\n",
+       "      <td>3.827125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.217288</td>\n",
+       "      <td>8.896363</td>\n",
+       "      <td>3.699227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.135000</td>\n",
+       "      <td>0.207500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.238333</td>\n",
+       "      <td>2.110833</td>\n",
+       "      <td>1.719167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.595000</td>\n",
+       "      <td>5.358333</td>\n",
+       "      <td>2.282500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>7.459167</td>\n",
+       "      <td>15.124167</td>\n",
+       "      <td>4.450833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>21.970000</td>\n",
+       "      <td>28.688333</td>\n",
+       "      <td>22.806667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            lowTime      highTime       medTime\n",
+       "count  22086.000000  22086.000000  22086.000000\n",
+       "mean       6.001460      9.198727      3.827125\n",
+       "std        5.217288      8.896363      3.699227\n",
+       "min        0.000000      0.135000      0.207500\n",
+       "25%        1.238333      2.110833      1.719167\n",
+       "50%        5.595000      5.358333      2.282500\n",
+       "75%        7.459167     15.124167      4.450833\n",
+       "max       21.970000     28.688333     22.806667"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['lowTime','highTime','medTime']].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>All_</th>\n",
+       "      <th>Beta</th>\n",
+       "      <th>CellType</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Mouse</th>\n",
+       "      <th>Period</th>\n",
+       "      <th>Sess</th>\n",
+       "      <th>acc</th>\n",
+       "      <th>accTrans</th>\n",
+       "      <th>dcc</th>\n",
+       "      <th>...</th>\n",
+       "      <th>start_med</th>\n",
+       "      <th>totalTime</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Medium</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>All</th>\n",
+       "      <th>Acc</th>\n",
+       "      <th>Dcc</th>\n",
+       "      <th>Acc_</th>\n",
+       "      <th>Dcc_</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>PV</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1236</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>1236_BaselineA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.915833</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.147783</td>\n",
+       "      <td>0.100849</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>PV</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1236</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>1236_BaselineA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9.915833</td>\n",
+       "      <td>3.022670</td>\n",
+       "      <td>1.337793</td>\n",
+       "      <td>0.295567</td>\n",
+       "      <td>0.907639</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.009901</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.111111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "      <td>PV</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1236</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>1236_BaselineA</td>\n",
+       "      <td>2</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9.915833</td>\n",
+       "      <td>0.604534</td>\n",
+       "      <td>3.344482</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.605093</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.009901</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13</td>\n",
+       "      <td>False</td>\n",
+       "      <td>PV</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1236</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>1236_BaselineA</td>\n",
+       "      <td>2</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9.915833</td>\n",
+       "      <td>3.627204</td>\n",
+       "      <td>3.344482</td>\n",
+       "      <td>0.295567</td>\n",
+       "      <td>1.311035</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.009901</td>\n",
+       "      <td>0.153846</td>\n",
+       "      <td>0.076923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>PV</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1236</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>1236_BaselineA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9.915833</td>\n",
+       "      <td>2.418136</td>\n",
+       "      <td>1.337793</td>\n",
+       "      <td>0.295567</td>\n",
+       "      <td>0.806790</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  All_   Beta CellType Day Mouse   Period            Sess acc  accTrans dcc  \\\n",
+       "0    1  False       PV   0  1236  Healthy  1236_BaselineA   1     100.0   0   \n",
+       "1    9  False       PV   0  1236  Healthy  1236_BaselineA   0     100.0   1   \n",
+       "2    6  False       PV   0  1236  Healthy  1236_BaselineA   2     100.0   1   \n",
+       "3   13  False       PV   0  1236  Healthy  1236_BaselineA   2     100.0   1   \n",
+       "4    8  False       PV   0  1236  Healthy  1236_BaselineA   0     100.0   0   \n",
+       "\n",
+       "   ...  start_med totalTime      High    Medium       Low       All   Acc  \\\n",
+       "0  ...          0  9.915833  0.000000  0.000000  0.147783  0.100849  0.01   \n",
+       "1  ...          2  9.915833  3.022670  1.337793  0.295567  0.907639  0.00   \n",
+       "2  ...          5  9.915833  0.604534  3.344482  0.000000  0.605093  0.02   \n",
+       "3  ...          5  9.915833  3.627204  3.344482  0.295567  1.311035  0.02   \n",
+       "4  ...          2  9.915833  2.418136  1.337793  0.295567  0.806790  0.00   \n",
+       "\n",
+       "        Dcc      Acc_      Dcc_  \n",
+       "0  0.000000  1.000000  0.000000  \n",
+       "1  0.009901  0.000000  0.111111  \n",
+       "2  0.009901  0.333333  0.166667  \n",
+       "3  0.009901  0.153846  0.076923  \n",
+       "4  0.000000  0.000000  0.000000  \n",
+       "\n",
+       "[5 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['High'] =  df.apply (lambda row: row.start_high/row.highTime if row.highTime != 0 else row.start_high, axis=1)\n",
     "df['Medium'] = df.apply (lambda row: row.start_med/row.medTime, axis=1)\n",
-    "df['Low'] = df.apply (lambda row: row.start_low/row.lowTime , axis=1)\n",
+    "df['Low'] = df.apply (lambda row: row.start_low/row.lowTime  if row.lowTime >0 else 0 , axis=1)\n",
     "df['All'] = df.apply (lambda row: row.All_/row.totalTime , axis=1)\n",
     "df['Acc'] = df.apply (lambda row: row.acc/row.accTrans , axis=1)\n",
     "df['Dcc'] = df.apply (lambda row: row.dcc/row.dccTrans , axis=1)\n",
@@ -223,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
