updates to analysis

--- a/repopulate onsetAndPeriods.hdf5.ipynb
+++ b/repopulate onsetAndPeriods.hdf5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,6 +73,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dana_z/ssd_2TB/6OHDA/IO.py:152: H5pyDeprecationWarning: dataset.value has been deprecated. Use dataset[()] instead.\n",
+      "  speed = hf[m][s]['mvmt']['speed'].value\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -81,7 +89,7 @@
       "cleaning up speed data\n",
       "1208  hi:  8.771471533672353\n",
       "cleaning up speed data\n",
-      "1222  hi:  5.156689209415026\n",
+      "1222  hi:  5.156689209415027\n",
       "cleaning up speed data\n",
       "1231  hi:  11.618820172401003\n",
       "cleaning up speed data\n",
@@ -93,13 +101,13 @@
       "cleaning up speed data\n",
       "2976  hi:  3.31284333461864\n",
       "cleaning up speed data\n",
-      "2980  hi:  2.454958217734436\n",
+      "2980  hi:  2.4549582177344353\n",
       "cleaning up speed data\n",
       "2981  hi:  6.1404716594406485\n",
       "cleaning up speed data\n",
-      "4539  hi:  20.02124398644328\n",
+      "4539  hi:  20.021243986443277\n",
       "cleaning up speed data\n",
-      "7584  hi:  20.05099337143352\n",
+      "7584  hi:  20.050993371433517\n",
       "cleaning up speed data\n",
       "7909  hi:  19.047091800698265\n",
       "cleaning up speed data\n",
@@ -107,7 +115,7 @@
       "cleaning up speed data\n",
       "8803  hi:  4.064502492829341\n",
       "cleaning up speed data\n",
-      "8815  hi:  5.469190903653327\n"
+      "8815  hi:  5.469190903653325\n"
      ]
     }
    ],
@@ -341,6 +349,230 @@
     "            sOnset = FindMvmtOnset2(speed, th_weak,th_strong ,hi,hiWin,thWin,shift)\n",
     "            spsubgrp = subgrp.create_group('Post')\n",
     "            spsubgrp['mvmtOnset'] = sOnset\n",
+    "        \n",
+    "f.close()   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 0761_day1\n",
+      "I deleted session: 0761_day10\n",
+      "I deleted session: 0761_day12\n",
+      "I deleted session: 0761_day2\n",
+      "I deleted session: 0761_day4\n",
+      "I deleted session: 0761_day6\n",
+      "I deleted session: 0761_day8\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 1208_day10\n",
+      "I deleted session: 1208_day12\n",
+      "I deleted session: 1208_day14\n",
+      "I deleted session: 1208_day2\n",
+      "I deleted session: 1208_day4\n",
+      "I deleted session: 1208_day6\n",
+      "I deleted session: 1208_day8\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 1222_day11\n",
+      "I deleted session: 1222_day13\n",
+      "I deleted session: 1222_day2\n",
+      "I deleted session: 1222_day3\n",
+      "I deleted session: 1222_day5\n",
+      "I deleted session: 1222_day7\n",
+      "I deleted session: 1222_day9\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 1236_day1\n",
+      "I deleted session: 1236_day11\n",
+      "I deleted session: 1236_day13\n",
+      "I deleted session: 1236_day3\n",
+      "I deleted session: 1236_day5\n",
+      "I deleted session: 1236_day7\n",
+      "I deleted session: 1236_day9\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 1793_day10\n",
+      "I deleted session: 1793_day12\n",
+      "I deleted session: 1793_day14\n",
+      "I deleted session: 1793_day2\n",
+      "I deleted session: 1793_day4\n",
+      "I deleted session: 1793_day6\n",
+      "I deleted session: 1793_day8\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 2976_day10\n",
+      "I deleted session: 2976_day12\n",
+      "I deleted session: 2976_day14\n",
+      "I deleted session: 2976_day2\n",
+      "I deleted session: 2976_day4\n",
+      "I deleted session: 2976_day6\n",
+      "I deleted session: 2976_day8\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 2980_day10\n",
+      "I deleted session: 2980_day12\n",
+      "I deleted session: 2980_day14\n",
+      "I deleted session: 2980_day2\n",
+      "I deleted session: 2980_day4\n",
+      "I deleted session: 2980_day6\n",
+      "I deleted session: 2980_day8\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 2981_day10\n",
+      "I deleted session: 2981_day12\n",
+      "I deleted session: 2981_day14\n",
+      "I deleted session: 2981_day2\n",
+      "I deleted session: 2981_day4\n",
+      "I deleted session: 2981_day6\n",
+      "I deleted session: 2981_day8\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 4539_day0\n",
+      "I deleted session: 4539_day1\n",
+      "I deleted session: 4539_day10\n",
+      "I deleted session: 4539_day11\n",
+      "I deleted session: 4539_day12\n",
+      "I deleted session: 4539_day13\n",
+      "I deleted session: 4539_day14\n",
+      "I deleted session: 4539_day2\n",
+      "I deleted session: 4539_day3\n",
+      "I deleted session: 4539_day4\n",
+      "I deleted session: 4539_day5\n",
+      "I deleted session: 4539_day6\n",
+      "I deleted session: 4539_day7\n",
+      "I deleted session: 4539_day8\n",
+      "I deleted session: 4539_day9\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 7584_Baseline0\n",
+      "I deleted session: 7584_day0\n",
+      "I deleted session: 7584_day1\n",
+      "I deleted session: 7584_day10\n",
+      "I deleted session: 7584_day11\n",
+      "I deleted session: 7584_day12\n",
+      "I deleted session: 7584_day15\n",
+      "I deleted session: 7584_day2\n",
+      "I deleted session: 7584_day3\n",
+      "I deleted session: 7584_day4\n",
+      "I deleted session: 7584_day5\n",
+      "I deleted session: 7584_day6\n",
+      "I deleted session: 7584_day7\n",
+      "I deleted session: 7584_day8\n",
+      "I deleted session: 7584_day9\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 7909_day0\n",
+      "I deleted session: 7909_day1\n",
+      "I deleted session: 7909_day10\n",
+      "I deleted session: 7909_day11\n",
+      "I deleted session: 7909_day12\n",
+      "I deleted session: 7909_day13\n",
+      "I deleted session: 7909_day14\n",
+      "I deleted session: 7909_day2\n",
+      "I deleted session: 7909_day3\n",
+      "I deleted session: 7909_day4\n",
+      "I deleted session: 7909_day5\n",
+      "I deleted session: 7909_day6\n",
+      "I deleted session: 7909_day7\n",
+      "I deleted session: 7909_day8\n",
+      "I deleted session: 7909_day9\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 8430_day1\n",
+      "I deleted session: 8430_day11\n",
+      "I deleted session: 8430_day3\n",
+      "I deleted session: 8430_day5\n",
+      "I deleted session: 8430_day7\n",
+      "I deleted session: 8430_day9\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 8803_day10\n",
+      "I deleted session: 8803_day12\n",
+      "I deleted session: 8803_day14\n",
+      "I deleted session: 8803_day2\n",
+      "I deleted session: 8803_day4\n",
+      "I deleted session: 8803_day5\n",
+      "I deleted session: 8803_day6\n",
+      "I deleted session: 8803_day8\n",
+      "cleaning up speed data\n",
+      "cleaning up speed data\n",
+      "I deleted session: 8815_day10\n",
+      "I deleted session: 8815_day12\n",
+      "I deleted session: 8815_day14\n",
+      "I deleted session: 8815_day2\n",
+      "I deleted session: 8815_day4\n",
+      "I deleted session: 8815_day6\n",
+      "I deleted session: 8815_day8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create hdf5 file with all the mice and mvmt Onset\n",
+    "f = h5py.File('OnsetsAndPeriods.hdf5','a')\n",
+    "\n",
+    "hiWin=20 \n",
+    "thWin=40\n",
+    "th_strong = 1\n",
+    "shift=-6\n",
+    "\n",
+    "miceList = speedOnsetPars.keys()\n",
+    "for m in miceList:\n",
+    "    grp = f[m]\n",
+    "    del grp['mvmtOnset2_params']\n",
+    "    sgrp = grp.create_group('mvmtOnset2_params')\n",
+    "    sgrp.attrs['hi'] = speedOnsetPars[m]\n",
+    "    sgrp.attrs['th_weak'] = np.min([3.3, speedOnsetPars[m]/2.5])\n",
+    "    sgrp.attrs['hiWin'] = hiWin\n",
+    "    sgrp.attrs['thWin'] = thWin\n",
+    "    sgrp.attrs['th_strong'] = th_strong\n",
+    "    sgrp.attrs['shift'] = shift\n",
+    "    data_pre = getData(Files[0],['speed'],period ='Pre', mice=m)\n",
+    "    data_post = getData(Files[0],['speed'],period ='Post', mice=m)\n",
+    "    days = np.zeros(len(data_pre))\n",
+    "    ind = 0\n",
+    "    # sort by session for my own OCD\n",
+    "    for sess in data_pre:\n",
+    "        if sess[5] == 'B':\n",
+    "            day = 0\n",
+    "        else:\n",
+    "            day = int(re.findall(r'\\d+',sess[5:])[0])\n",
+    "        days[ind] = day\n",
+    "        ind= ind+1\n",
+    "    a = np.argsort(days)\n",
+    "    dKeys = list(data_pre.keys())\n",
+    "    # calculte high speed period, do 3 sessions per plot, and stor in ppt\n",
+    "    ind = 0;\n",
+    "    hi = sgrp.attrs['hi']\n",
+    "    th_weak = sgrp.attrs['th_weak']\n",
+    "    for aa in range(0,len(data_pre)):\n",
+    "        sess = dKeys[a[aa]]\n",
+    "        speed = data_pre[sess]['speed']['speed']\n",
+    "        speed = speed.T\n",
+    "        sOnset = FindMvmtOnset2(speed, th_weak,th_strong ,hi,hiWin,thWin,shift)\n",
+    "        subgrp = grp[sess]\n",
+    "        ssubgrp = subgrp['Pre']\n",
+    "        del ssubgrp['mvmtOnset2'] \n",
+    "        ssubgrp['mvmtOnset2'] = sOnset\n",
+    "        if sess in data_post.keys():\n",
+    "            speed = data_post[sess]['speed']['speed']\n",
+    "            speed = speed.T\n",
+    "            sOnset = FindMvmtOnset2(speed, th_weak,th_strong ,hi,hiWin,thWin,shift)\n",
+    "            spsubgrp = subgrp['Post']\n",
+    "            del spsubgrp['mvmtOnset2'] \n",
+    "            spsubgrp['mvmtOnset2'] = sOnset\n",
     "        \n",
     "f.close()   "
    ]
@@ -9697,7 +9929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
