more paper stuff

--- a/repopulate onsetAndPeriods.hdf5.ipynb
+++ b/repopulate onsetAndPeriods.hdf5.ipynb
@@ -69,6 +69,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save all full spectograms in hdf5 file:\n",
+    "# create hdf5 file with all the mice and mvmt Onset\n",
+    "f = h5py.File('Spectograms.hdf5','a')\n",
+    "\n",
+    "fr = np.empty((408,1))\n",
+    "for j in range(12,420):\n",
+    "    fr[j-12]=pywt.scale2frequency('morl', j)*3051.7578125\n",
+    "[intF,inds] = np.unique(np.floor(fr),return_index=True)\n",
+    "\n",
+    "waveletName = 'morl' #must be from waveletsOptions\n",
+    "scales = inds+12\n",
+    "\n",
+    "for m in miceList:\n",
+    "    grp = f.create_group(m)\n",
+    "    data_pre = getData(Files[0],['lfp'],period ='Pre', mice=m)\n",
+    "    data_post = getData(Files[0],['lfp'],period ='Post', mice=m)\n",
+    "    days = np.zeros(len(data_pre))\n",
+    "    ind = 0\n",
+    "    # sort by session for my own OCD\n",
+    "    for sess in data_pre:\n",
+    "        if sess[5] == 'B':\n",
+    "            day = 0\n",
+    "        else:\n",
+    "            day = int(re.findall(r'\\d+',sess[5:])[0])\n",
+    "        days[ind] = day\n",
+    "        ind= ind+1\n",
+    "    a = np.argsort(days)\n",
+    "    dKeys = list(data_pre.keys())\n",
+    "    # calculte high speed period, do 3 sessions per plot, and stor in ppt\n",
+    "    ind = 0;\n",
+    "    for aa in tqdm(range(0,len(data_pre))):\n",
+    "        sess = dKeys[a[aa]]\n",
+    "        lfp = data_pre[sess]['lfp']['lfp']\n",
+    "        FS = data_pre[sess]['lfp']['FS']\n",
+    "        dt = 1/FS\n",
+    "        [coefficients, frequencies] = pywt.cwt(lfp[:,0], scales, waveletName, dt)\n",
+    "        \n",
+    "        subgrp = grp.create_group(sess)\n",
+    "        ssubgrp = subgrp.create_group('Pre')\n",
+    "        ssubgrp['freq'] = frequencies\n",
+    "        ssubgrp['coeff'] = coefficients\n",
+    "        del frequencies\n",
+    "        del coefficients\n",
+    "        if sess in data_post.keys():\n",
+    "            lfp = data_post[sess]['lfp']['lfp']\n",
+    "            FS = data_post[sess]['lfp']['FS']\n",
+    "            [coefficients, frequencies] = pywt.cwt(lfp[:,0], scales, waveletName, dt)\n",
+    "            spsubgrp = subgrp.create_group('Post')\n",
+    "            spsubgrp['freq'] = frequencies\n",
+    "            spsubgrp['coeff'] = coefficients\n",
+    "            del frequencies\n",
+    "            del coefficients\n",
+    "        \n",
+    "f.close()   "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
