6th round of paper edits

--- a/repopulate onsetAndPeriods.hdf5.ipynb
+++ b/repopulate onsetAndPeriods.hdf5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7084,13 +7084,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -8330,19 +8323,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dana_z/ssd_2TB/6OHDA/IO.py:245: H5pyDeprecationWarning: dataset.value has been deprecated. Use dataset[()] instead.\n",
-      "  rot = hf[m][s]['mvmt']['rotation'].value\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -8379,6 +8364,14 @@
       "8803  hi:  0.9611865593527847\n",
       "cleaning up rot data\n",
       "8815  hi:  0.7169322936480412\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dana_z/ssd_2TB/6OHDA/IO.py:245: H5pyDeprecationWarning: dataset.value has been deprecated. Use dataset[()] instead.\n",
+      "  rot = hf[m][s]['mvmt']['rotation'].value\n"
      ]
     }
    ],
@@ -8640,6 +8633,254 @@
     "            spsubgrp['clockWiseOnset'] = sClockwise\n",
     "            del spsubgrp['antiClockWiseOnset']\n",
     "            spsubgrp['antiClockWiseOnset'] = sAnticlockkwise\n",
+    "            \n",
+    "f.close()   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 0761_day1\n",
+      "I deleted session: 0761_day10\n",
+      "I deleted session: 0761_day12\n",
+      "I deleted session: 0761_day2\n",
+      "I deleted session: 0761_day4\n",
+      "I deleted session: 0761_day6\n",
+      "I deleted session: 0761_day8\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 1208_day10\n",
+      "I deleted session: 1208_day12\n",
+      "I deleted session: 1208_day14\n",
+      "I deleted session: 1208_day2\n",
+      "I deleted session: 1208_day4\n",
+      "I deleted session: 1208_day6\n",
+      "I deleted session: 1208_day8\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 1222_day11\n",
+      "I deleted session: 1222_day13\n",
+      "I deleted session: 1222_day2\n",
+      "I deleted session: 1222_day3\n",
+      "I deleted session: 1222_day5\n",
+      "I deleted session: 1222_day7\n",
+      "I deleted session: 1222_day9\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 1236_day1\n",
+      "I deleted session: 1236_day11\n",
+      "I deleted session: 1236_day13\n",
+      "I deleted session: 1236_day3\n",
+      "I deleted session: 1236_day5\n",
+      "I deleted session: 1236_day7\n",
+      "I deleted session: 1236_day9\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 1793_day10\n",
+      "I deleted session: 1793_day12\n",
+      "I deleted session: 1793_day14\n",
+      "I deleted session: 1793_day2\n",
+      "I deleted session: 1793_day4\n",
+      "I deleted session: 1793_day6\n",
+      "I deleted session: 1793_day8\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 2976_day10\n",
+      "I deleted session: 2976_day12\n",
+      "I deleted session: 2976_day14\n",
+      "I deleted session: 2976_day2\n",
+      "I deleted session: 2976_day4\n",
+      "I deleted session: 2976_day6\n",
+      "I deleted session: 2976_day8\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 2980_day10\n",
+      "I deleted session: 2980_day12\n",
+      "I deleted session: 2980_day14\n",
+      "I deleted session: 2980_day2\n",
+      "I deleted session: 2980_day4\n",
+      "I deleted session: 2980_day6\n",
+      "I deleted session: 2980_day8\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 2981_day10\n",
+      "I deleted session: 2981_day12\n",
+      "I deleted session: 2981_day14\n",
+      "I deleted session: 2981_day2\n",
+      "I deleted session: 2981_day4\n",
+      "I deleted session: 2981_day6\n",
+      "I deleted session: 2981_day8\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 4539_day0\n",
+      "I deleted session: 4539_day1\n",
+      "I deleted session: 4539_day10\n",
+      "I deleted session: 4539_day11\n",
+      "I deleted session: 4539_day12\n",
+      "I deleted session: 4539_day13\n",
+      "I deleted session: 4539_day14\n",
+      "I deleted session: 4539_day2\n",
+      "I deleted session: 4539_day3\n",
+      "I deleted session: 4539_day4\n",
+      "I deleted session: 4539_day5\n",
+      "I deleted session: 4539_day6\n",
+      "I deleted session: 4539_day7\n",
+      "I deleted session: 4539_day8\n",
+      "I deleted session: 4539_day9\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 7584_Baseline0\n",
+      "I deleted session: 7584_day0\n",
+      "I deleted session: 7584_day1\n",
+      "I deleted session: 7584_day10\n",
+      "I deleted session: 7584_day11\n",
+      "I deleted session: 7584_day12\n",
+      "I deleted session: 7584_day15\n",
+      "I deleted session: 7584_day2\n",
+      "I deleted session: 7584_day3\n",
+      "I deleted session: 7584_day4\n",
+      "I deleted session: 7584_day5\n",
+      "I deleted session: 7584_day6\n",
+      "I deleted session: 7584_day7\n",
+      "I deleted session: 7584_day8\n",
+      "I deleted session: 7584_day9\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 7909_day0\n",
+      "I deleted session: 7909_day1\n",
+      "I deleted session: 7909_day10\n",
+      "I deleted session: 7909_day11\n",
+      "I deleted session: 7909_day12\n",
+      "I deleted session: 7909_day13\n",
+      "I deleted session: 7909_day14\n",
+      "I deleted session: 7909_day2\n",
+      "I deleted session: 7909_day3\n",
+      "I deleted session: 7909_day4\n",
+      "I deleted session: 7909_day5\n",
+      "I deleted session: 7909_day6\n",
+      "I deleted session: 7909_day7\n",
+      "I deleted session: 7909_day8\n",
+      "I deleted session: 7909_day9\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 8430_day1\n",
+      "I deleted session: 8430_day11\n",
+      "I deleted session: 8430_day3\n",
+      "I deleted session: 8430_day5\n",
+      "I deleted session: 8430_day7\n",
+      "I deleted session: 8430_day9\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 8803_day10\n",
+      "I deleted session: 8803_day12\n",
+      "I deleted session: 8803_day14\n",
+      "I deleted session: 8803_day2\n",
+      "I deleted session: 8803_day4\n",
+      "I deleted session: 8803_day5\n",
+      "I deleted session: 8803_day6\n",
+      "I deleted session: 8803_day8\n",
+      "cleaning up rot data\n",
+      "cleaning up rot data\n",
+      "I deleted session: 8815_day10\n",
+      "I deleted session: 8815_day12\n",
+      "I deleted session: 8815_day14\n",
+      "I deleted session: 8815_day2\n",
+      "I deleted session: 8815_day4\n",
+      "I deleted session: 8815_day6\n",
+      "I deleted session: 8815_day8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create hdf5 file with all the mice and mvmt Onset\n",
+    "f = h5py.File('OnsetsAndPeriods.hdf5','a')\n",
+    "hiWin=20 \n",
+    "thWin=40\n",
+    "shift=-4\n",
+    "miceList = rotOnsetPars.keys()\n",
+    "for m in miceList:\n",
+    "    grp = f[m]\n",
+    "    try:\n",
+    "        sgrp = grp.create_group('rotOnset_params2')\n",
+    "    except:\n",
+    "        sgrp = grp['rotOnset_params2']\n",
+    "    sgrp.attrs['hi'] = rotOnsetPars[m]\n",
+    "    sgrp.attrs['th_weak'] = np.min([1, rotOnsetPars[m]/5])\n",
+    "    sgrp.attrs['hiWin'] = hiWin\n",
+    "    sgrp.attrs['thWin'] = thWin\n",
+    "    sgrp.attrs['th_strong'] =np.min([1, rotOnsetPars[m]/5])/2\n",
+    "    sgrp.attrs['shift'] = shift\n",
+    "    data_pre = getData(Files[0],['rot'],period ='Pre', mice=m)\n",
+    "    data_post = getData(Files[0],['rot'],period ='Post', mice=m)\n",
+    "    days = np.zeros(len(data_pre))\n",
+    "    ind = 0\n",
+    "    # sort by session for my own OCD\n",
+    "    for sess in data_pre:\n",
+    "        if sess[5] == 'B':\n",
+    "            day = 0\n",
+    "        else:\n",
+    "            day = int(re.findall(r'\\d+',sess[5:])[0])\n",
+    "        days[ind] = day\n",
+    "        ind= ind+1\n",
+    "    a = np.argsort(days)\n",
+    "    dKeys = list(data_pre.keys())\n",
+    "    # calculte high rot period, do 3 sessions per plot, and stor in ppt\n",
+    "    ind = 0;\n",
+    "    hi = sgrp.attrs['hi']\n",
+    "    th_weak = sgrp.attrs['th_weak']\n",
+    "    th_strong = sgrp.attrs['th_strong']\n",
+    "    for aa in range(0,len(data_pre)):\n",
+    "        sess = dKeys[a[aa]]\n",
+    "        rot = data_pre[sess]['rot']['rot']\n",
+    "        rot = rot.T\n",
+    "        sOnset = FindMvmtOnset2(np.abs(rot), th_weak,th_weak/2 ,hi,hiWin,thWin,shift)\n",
+    "        sClockwise = np.zeros_like(sOnset,dtype=bool)\n",
+    "        sAnticlockkwise = np.zeros_like(sOnset,dtype=bool)\n",
+    "        for T in np.argwhere(sOnset):\n",
+    "            if np.mean(rot[int(T):int(T)+20])<0:\n",
+    "                sAnticlockkwise[int(T)] = True\n",
+    "            else:     \n",
+    "                sClockwise[int(T)] = True\n",
+    "        subgrp = grp[sess]\n",
+    "        ssubgrp = subgrp['Pre']\n",
+    "#         del ssubgrp['rotOnset2']\n",
+    "        ssubgrp['rotOnset2'] = sOnset\n",
+    "#         del ssubgrp['clockWiseOnset2']\n",
+    "        ssubgrp['clockWiseOnset2'] = sClockwise\n",
+    "#         del ssubgrp['antiClockWiseOnset2']\n",
+    "        ssubgrp['antiClockWiseOnset2'] = sAnticlockkwise\n",
+    "        if sess in data_post.keys():\n",
+    "            rot = data_post[sess]['rot']['rot']\n",
+    "            rot = rot.T\n",
+    "            sOnset = FindMvmtOnset2(np.abs(rot), th_weak,th_weak/2 ,hi,hiWin,thWin,shift)\n",
+    "            sClockwise = np.zeros_like(sOnset,dtype=bool)\n",
+    "            sAnticlockkwise = np.zeros_like(sOnset,dtype=bool)\n",
+    "            for T in np.argwhere(sOnset):\n",
+    "                if np.mean(rot[int(T):int(T)+20])<0:\n",
+    "                    sAnticlockkwise[int(T)] = True\n",
+    "                else:     \n",
+    "                    sClockwise[int(T)] = True\n",
+    "            spsubgrp = subgrp['Post']\n",
+    "#             del spsubgrp['rotOnset2']\n",
+    "            spsubgrp['rotOnset2'] = sOnset\n",
+    "#             del spsubgrp['clockWiseOnset2']\n",
+    "            spsubgrp['clockWiseOnset2'] = sClockwise\n",
+    "#             del spsubgrp['antiClockWiseOnset2']\n",
+    "            spsubgrp['antiClockWiseOnset2'] = sAnticlockkwise\n",
     "            \n",
     "f.close()   "
    ]
