latest version for cell reports submission

--- a/Wavelets test on simulated data .ipynb
+++ b/Wavelets test on simulated data .ipynb
@@ -3502,7 +3502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3512,7 +3512,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(scales)\n",
+    "[coefficients, frequencies] = pywt.cwt(lfp[:,0].T,scales+45 , waveletName, dt[0])\n",
+    "# scales.astype(float)[0].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-37-e5930808be2f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mdel\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'f' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "del f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3556,7 +3588,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 14/14 [17:57<00:00, 76.94s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 14/14 [1:18:37<00:00, 336.97s/it]\n"
      ]
     },
     {
@@ -3593,7 +3625,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 13/13 [17:22<00:00, 80.23s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 13/13 [1:18:31<00:00, 362.41s/it]\n"
      ]
     },
     {
@@ -3629,7 +3661,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 14/14 [17:59<00:00, 77.13s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 14/14 [1:20:21<00:00, 344.41s/it]\n"
      ]
     },
     {
@@ -3658,7 +3690,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████| 3/3 [06:04<00:00, 121.60s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████| 3/3 [27:17<00:00, 545.98s/it]\n"
      ]
     },
     {
@@ -3694,7 +3726,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 14/14 [17:29<00:00, 74.96s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 14/14 [1:19:13<00:00, 339.55s/it]\n"
      ]
     },
     {
@@ -3723,7 +3755,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████| 3/3 [06:00<00:00, 120.22s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████| 3/3 [26:34<00:00, 531.66s/it]\n"
      ]
     },
     {
@@ -3759,7 +3791,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 14/14 [18:10<00:00, 77.87s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 14/14 [1:17:23<00:00, 331.65s/it]\n"
      ]
     },
     {
@@ -3796,7 +3828,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 13/13 [17:45<00:00, 81.93s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 13/13 [1:20:06<00:00, 369.72s/it]\n"
      ]
     },
     {
@@ -3832,7 +3864,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 14/14 [18:12<00:00, 78.05s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 14/14 [1:19:28<00:00, 340.62s/it]\n"
      ]
     },
     {
@@ -3868,7 +3900,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 14/14 [17:41<00:00, 75.83s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 14/14 [1:18:49<00:00, 337.79s/it]\n"
      ]
     },
     {
@@ -3912,7 +3944,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 19/19 [14:55<00:00, 47.12s/it]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 19/19 [1:07:06<00:00, 211.94s/it]\n",
       "  0%|                                                                                           | 0/17 [00:00<?, ?it/s]"
      ]
     },
@@ -3943,7 +3975,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 17/17 [10:52<00:00, 38.40s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████| 17/17 [49:20<00:00, 174.14s/it]\n"
      ]
     },
     {
@@ -3987,7 +4019,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 19/19 [14:56<00:00, 47.16s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 19/19 [1:06:59<00:00, 211.57s/it]\n"
      ]
     },
     {
@@ -4022,7 +4054,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 13/13 [17:29<00:00, 80.76s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 13/13 [1:15:46<00:00, 349.71s/it]\n"
      ]
     },
     {
@@ -4059,7 +4091,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 14/14 [16:43<00:00, 71.67s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 14/14 [1:11:39<00:00, 307.07s/it]\n"
      ]
     },
     {
@@ -4095,7 +4127,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 14/14 [18:38<00:00, 79.87s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 14/14 [1:20:52<00:00, 346.60s/it]\n"
      ]
     }
    ],
@@ -4104,13 +4136,14 @@
     "# create hdf5 file with all the mice and mvmt Onset\n",
     "f = h5py.File('Spectograms.hdf5','a')\n",
     "\n",
-    "fr = np.empty((408,1))\n",
-    "for j in range(12,420):\n",
-    "    fr[j-12]=pywt.scale2frequency('morl', j)*3051.7578125\n",
+    "minS = 45\n",
+    "maxS = 950\n",
+    "waveletName = 'cmor14.0-1.5'\n",
+    "fr = np.empty((maxS-minS,1))\n",
+    "for j in range(minS,maxS):\n",
+    "    fr[j-minS]=pywt.scale2frequency(waveletName , j)*3051.7578125\n",
     "[intF,inds] = np.unique(np.floor(fr),return_index=True)\n",
-    "\n",
-    "waveletName = 'morl' #must be from waveletsOptions\n",
-    "scales = inds+12\n",
+    "scales = inds+45\n",
     "\n",
     "for m in miceList:\n",
     "    grp = f.create_group(m)\n",
@@ -4135,8 +4168,8 @@
     "        lfp = data_pre[sess]['lfp']['lfp']\n",
     "        FS = data_pre[sess]['lfp']['FS']\n",
     "        dt = 1/FS\n",
-    "        [coefficients, frequencies] = pywt.cwt(lfp[:,0], scales, waveletName, dt)\n",
-    "        \n",
+    "        [coefficients, frequencies] = pywt.cwt(lfp[:,0], scales, waveletName, dt[0])\n",
+    "                \n",
     "        subgrp = grp.create_group(sess)\n",
     "        ssubgrp = subgrp.create_group('Pre')\n",
     "        ssubgrp['freq'] = frequencies\n",
@@ -4146,10 +4179,10 @@
     "        if sess in data_post.keys():\n",
     "            lfp = data_post[sess]['lfp']['lfp']\n",
     "            FS = data_post[sess]['lfp']['FS']\n",
-    "            [coefficients, frequencies] = pywt.cwt(lfp[:,0], scales, waveletName, dt)\n",
+    "            [coefficients, frequencies] = pywt.cwt(lfp[:,0], scales, waveletName, dt[0])\n",
     "            spsubgrp = subgrp.create_group('Post')\n",
     "            spsubgrp['freq'] = frequencies\n",
-    "            spsubgrp['coeff'] = coefficients\n",
+    "            spsubgrp['coeff'] =coefficients\n",
     "            del frequencies\n",
     "            del coefficients\n",
     "        \n",
