before cleaning to make public

--- a/repopulate onsetAndPeriods.hdf5.ipynb
+++ b/repopulate onsetAndPeriods.hdf5.ipynb
@@ -702,7 +702,7 @@
     "highSpeedPeriodsPars = {}\n",
     "for m in miceList:\n",
     "    data = getData(Files[0],['speed'],period ='Pre',mice=m, day = lambda x: x==0)\n",
-    "    maxSpeed = [];\n",
+    "    maxSpeed = []\n",
     "    for sess in data:\n",
     "        speed = smooth(data[sess]['speed']['speed'],20)\n",
     "        maxSpeed.append(np.max(speed))\n",
